--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -319,7 +319,7 @@
   </div>
 
   <!-- Horizontal scrollable plant carousel (compact) -->
-  <div class="relative -mx-4 px-4">
+  <div class="relative -mx-4 px-4 overflow-hidden">
     <!-- Left gradient indicator (outside scroll container to stay fixed) -->
     <div id="gradient-left"
          class="absolute left-0 top-0 bottom-0 w-4 sm:w-8
