--- a/app/templates/guides/guide.html
+++ b/app/templates/guides/guide.html
@@ -8,8 +8,18 @@
 {% block og_title %}{{ guide.name }} Care Guide | PlantCareAI{% endblock %}
 {% block og_description %}{{ guide.meta_description }}{% endblock %}
 
+{% block og_image %}
+<meta property="og:image" content="{{ url_for('static', filename='images/og/guide-' ~ guide.slug ~ '.png', _external=True) }}" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:image:alt" content="{{ guide.name }} Care Guide - PlantCareAI" />
+{% endblock %}
 {% block twitter_title %}{{ guide.name }} Care Guide{% endblock %}
 {% block twitter_description %}{{ guide.meta_description }}{% endblock %}
+{% block twitter_image %}
+<meta name="twitter:image" content="{{ url_for('static', filename='images/og/guide-' ~ guide.slug ~ '.png', _external=True) }}" />
+<meta name="twitter:image:alt" content="{{ guide.name }} Care Guide - PlantCareAI" />
+{% endblock %}
 
 {% block extra_head %}
 <!-- Article Structured Data for SEO -->
